--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,8 @@
+$body-bg:       #bdc3c7;
+$navbar-default-bg: #ecf0f1;
+$navbar-default-link-color: black;
+$brand-primary: #c0392b;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
